--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,39 +9,40 @@
     android:background="#424242"
     >
 
-
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="325dp"
-        android:layout_height="20dp"
-        android:
+        android:id="@+id/textView2"
+        android:layout_width="307dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:text="TextView"
-        android:textAlignment="center"
-        tools:layout_editor_absoluteX="-5dp"
-        tools:layout_editor_absoluteY="489dp"
-        tools:text="Nenhuma conexão com a Internet disponível"
-        android:background="@android:color/black"
         android:textColor="#ff3d00"
+        android:textSize="25sp"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />
 
-        />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="318dp"
         android:layout_height="226dp"
+        android:layout_marginTop="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:srcCompat="@mipmap/no_wifi"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="184dp" />
+        tools:layout_editor_absoluteX="1dp" />
+
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="308dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="325dp"
+        android:layout_height="22dp"
+        android:layout_marginTop="88dp"
+        android:background="@android:color/black"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="#ff3d00"
-        android:textSize="25sp"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="16dp"
-        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        tools:text="Nenhuma conexão com a Internet disponível" />
+
 
 </android.support.constraint.ConstraintLayout>
