--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:text="TextView"
+        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
         android:textColor="#ff3d00"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,16 +29,16 @@
         android:layout_marginTop="72dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:srcCompat="@mipmap/no_wifi"
-        tools:layout_editor_absoluteX="1dp" />
+        />
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="325dp"
         android:layout_height="22dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="90dp"
         android:background="@android:color/black"
-        android:text="TextView"
+        android:text="Nenhuma conexão com a Internet disponível"
         android:textAlignment="center"
         android:textColor="#ff3d00"
         app:layout_constraintTop_toBottomOf="@+id/imageView5"
