--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,45 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    tools:layout_editor_absoluteY="25dp"
     android:background="#424242"
+    tools:context="com.example.computer.myapplication.MainActivity"
     >
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="307dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
-        android:textColor="#ff3d00"
+        android:id="@+id/textViewCheckConnection"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />
 
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="318dp"
-        android:layout_height="226dp"
-        android:layout_marginTop="72dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@mipmap/no_wifi"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
-
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="325dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="90dp"
-        android:background="@android:color/black"
-        android:text="Nenhuma conexão com a Internet disponível"
-        android:textAlignment="center"
-        android:textColor="#ff3d00"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        tools:text="Nenhuma conexão com a Internet disponível" />
-
 
 </android.support.constraint.ConstraintLayout>
